Dart/testData/highlighting/ColorAnnotator.dart
<error descr="Annotation can be only constant variable or constant constructor invocation"><info descr="metadata">@aaa.bbb</info>("")</error>
<info descr="metadata">@<info descr="null">deprecated</info></info>
<info descr="null">foo</info>(){}